@@ -1,4 +1,5 @@
 0.05
+ - Add possibility of code in table field.
 
 0.04 2024-01-06T19:41:58+01:00
  - Rewrite from Data::HTML::A to Data::HTML::Element::A.
